Improve tests quality

--- a/src/classes/ArtistBuilderTest.cls
+++ b/src/classes/ArtistBuilderTest.cls
@@ -15,7 +15,7 @@ private class ArtistBuilderTest {
             .build();
         Test.stopTest();
         
-        System.assertNotEquals(null, artist);
+        System.assertNotEquals(null, artist, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Artist__c' }));
     }
 
     @isTest
@@ -26,11 +26,11 @@ private class ArtistBuilderTest {
                                  LIMIT 1];
         Test.stopTest();
         
-        System.assertNotEquals(null, artist);
+        System.assertNotEquals(null, artist, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Artist__c' }));
     }
     
     @isTest
-    static void artistShouldHaveAName() {
+    static void artistShouldHaveName() {
         Test.startTest();        
         MBMS_Artist__c artist = [SELECT Name
                                  FROM MBMS_Artist__c
@@ -41,77 +41,76 @@ private class ArtistBuilderTest {
         
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artist.Name);
+        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artist.Name, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { MBMS_Constants.MBMS_TEST_STRING_VALUE }));
     }
     
     @isTest
-    static void artistShouldHaveAFirstName() {
+    static void artistShouldHaveFirstName() {
         Test.startTest();        
         MBMS_Artist__c artist = [SELECT MBMS_First_Name__c
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artist.MBMS_First_Name__c);
+        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artist.MBMS_First_Name__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_First_Name__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
     }
     
     @isTest
-    static void artistShouldHaveALastName() {
+    static void artistShouldHaveLastName() {
         Test.startTest();        
         MBMS_Artist__c artist = [SELECT MBMS_Last_Name__c
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artist.MBMS_Last_Name__c);
+        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artist.MBMS_Last_Name__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Last_Name__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
     }
     
     @isTest
-    static void artistShouldHaveABirthPlace() {
+    static void artistShouldHaveBirthPlace() {
         Test.startTest();        
         MBMS_Artist__c artist = [SELECT MBMS_Birthplace__c
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
         Test.stopTest();
-        
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artist.MBMS_Birthplace__c);
+
+        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artist.MBMS_Birthplace__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Birthplace__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
     }
     
     @isTest
-    static void artistShouldHaveADateOfBirth() {
+    static void artistShouldHaveDateOfBirth() {
         Test.startTest();        
         MBMS_Artist__c artist = [SELECT MBMS_Date_of_Birth__c
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
         Test.stopTest();
-        
-        System.assertEquals(MBMS_Constants.MBMS_TEST_DATE_200_DAYS_BEFORE_TODAY, artist.MBMS_Date_of_Birth__c);
+        System.assertEquals(MBMS_Constants.MBMS_TEST_DATE_200_DAYS_BEFORE_TODAY, artist.MBMS_Date_of_Birth__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Date_of_Birth__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
     }
     
     @isTest
-    static void artistShouldHaveADateOfDeath() {
+    static void artistShouldHaveDateOfDeath() {
         Test.startTest();        
         MBMS_Artist__c artist = [SELECT MBMS_Date_of_Death__c
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
         Test.stopTest();
-        
-        System.assertEquals(MBMS_Constants.MBMS_TEST_DATE_10_DAYS_BEFORE_TODAY, artist.MBMS_Date_of_Death__c);
+
+        System.assertEquals(MBMS_Constants.MBMS_TEST_DATE_10_DAYS_BEFORE_TODAY, artist.MBMS_Date_of_Death__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Date_of_Death__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
     }
     
     @isTest
-    static void artistShouldHaveADescription() {
+    static void artistShouldHaveDescription() {
         Test.startTest();        
         MBMS_Artist__c artist = [SELECT MBMS_Description__c
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artist.MBMS_Description__c);
+        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artist.MBMS_Description__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Description__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
     }
     
     @isTest
-    static void artistShouldHaveARole() {
+    static void artistShouldHaveRole() {
         Test.startTest();        
         MBMS_Artist__c artist = [SELECT MBMS_Roles__c
                                  FROM MBMS_Artist__c
@@ -120,29 +119,29 @@ private class ArtistBuilderTest {
         
         List<String> roles = artist.MBMS_Roles__c.split(MBMS_Constants.MBMS_SEMICOLON);
         
-        System.assert(roles.size() > 0);
-        System.assertEquals(MBMS_Constants.MBMS_ROLE_AUTHOR, roles.get(0));
+        System.assert(roles.size() > 0, String.format(MBMS_Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'Roles', '0' }));
+        System.assertEquals(MBMS_Constants.MBMS_ROLE_AUTHOR, roles.get(0), String.format(MBMS_Constants.FIELD_SHOULD_CONTAIN_PATTERN, new List<String> { 'MBMS_Roles__c', MBMS_Constants.MBMS_ROLE_AUTHOR }));
     }
 
     @isTest
-    static void artistShouldHaveAStatus() {
+    static void artistShouldHaveStatus() {
         Test.startTest();        
         MBMS_Artist__c artist = [SELECT MBMS_Status__c
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_STATUS_APPROVED, artist.MBMS_Status__c);
+        System.assertEquals(MBMS_Constants.MBMS_STATUS_APPROVED, artist.MBMS_Status__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status__c', MBMS_Constants.MBMS_STATUS_APPROVED }));
     }
     
     @isTest
-    static void artistShouldHaveAStatusComment() {
+    static void artistShouldHaveStatusComment() {
         Test.startTest();        
         MBMS_Artist__c artist = [SELECT MBMS_Status_Comment__c
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT, artist.MBMS_Status_Comment__c);
+        System.assertEquals(MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT, artist.MBMS_Status_Comment__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status_Comment__c', MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT }));
     }
 }
