--- a/src/classes/ArtistNewsBuilderTest.cls
+++ b/src/classes/ArtistNewsBuilderTest.cls
@@ -15,7 +15,7 @@ private class ArtistNewsBuilderTest {
             .build();
         Test.stopTest();
         
-        System.assertNotEquals(null, artistNews);
+        System.assertNotEquals(null, artistNews, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Artist_News__c' }));
     }
     
     @isTest
@@ -26,7 +26,7 @@ private class ArtistNewsBuilderTest {
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assertNotEquals(null, artistNews);
+        System.assertNotEquals(null, artistNews, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Artist_News__c' }));
     }
     
     @isTest
@@ -37,7 +37,7 @@ private class ArtistNewsBuilderTest {
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artistNews.Name);
+        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artistNews.Name, String.format(MBMS_Constants.FIELD_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Artist_News__c' }));
     }
     
     @isTest
@@ -48,7 +48,7 @@ private class ArtistNewsBuilderTest {
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artistNews.MBMS_Title__c);
+        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artistNews.MBMS_Title__c, String.format(MBMS_Constants.FIELD_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Title__c' }));
     }
     
     @isTest
@@ -59,7 +59,7 @@ private class ArtistNewsBuilderTest {
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artistNews.MBMS_Content__c);
+        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artistNews.MBMS_Content__c, String.format(MBMS_Constants.FIELD_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Content__c' }));
     }
     
     @isTest
@@ -70,8 +70,7 @@ private class ArtistNewsBuilderTest {
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assert(artistNews.MBMS_Tags__c.contains(MBMS_Constants.MBMS_TEST_STRING_VALUE));
-        System.assert(artistNews.MBMS_Tags__c.contains(';'));
+        System.assert(artistNews.MBMS_Tags__c.contains(MBMS_Constants.MBMS_TEST_STRING_VALUE), String.format(MBMS_Constants.FIELD_SHOULD_CONTAIN_PATTERN, new List<String> { 'MBMS_Tags__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
     }
     
     @isTest
@@ -82,7 +81,7 @@ private class ArtistNewsBuilderTest {
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assertNotEquals(null, artistNews.MBMS_Artist__c);
+        System.assertNotEquals(null, artistNews.MBMS_Artist__c, String.format(MBMS_Constants.FIELD_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Artist__c' }));
     }
     
     @isTest
@@ -93,6 +92,6 @@ private class ArtistNewsBuilderTest {
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artistNews.MBMS_Image_URL__c);
+        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artistNews.MBMS_Image_URL__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Image_URL__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
     }
 }
