--- a/src/classes/BookBuilderTest.cls
+++ b/src/classes/BookBuilderTest.cls
@@ -15,7 +15,7 @@ private class BookBuilderTest {
             .build();
         Test.stopTest();
         
-        System.assertNotEquals(null, book);
+        System.assertNotEquals(null, book, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Book__c' }));
     }
     
     @isTest
@@ -26,83 +26,83 @@ private class BookBuilderTest {
                              LIMIT 1];
         Test.stopTest();
         
-        System.assertNotEquals(null, book);
+        System.assertNotEquals(null, book, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Book__c' }));
     }
     
     @isTest
-    static void bookShouldHaveAnArtist() {
+    static void bookShouldHaveArtist() {
         Test.startTest();        
         MBMS_Book__c book = [SELECT MBMS_Artist__c
                              FROM MBMS_Book__c
                              LIMIT 1];
         Test.stopTest();
         
-        System.assertNotEquals(null, book.MBMS_Artist__c);
+        System.assertNotEquals(null, book.MBMS_Artist__c, String.format(MBMS_Constants.FIELD_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Artist__c' }));
     }
     
     @isTest
-    static void bookShouldHaveAName() {
+    static void bookShouldHaveName() {
         Test.startTest();        
         MBMS_Book__c book = [SELECT Name
                              FROM MBMS_Book__c
                              LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, book.Name);
+        System.assertNotEquals(null, book.MBMS_Artist__c, String.format(MBMS_Constants.FIELD_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'Name' }));
     }
     
     @isTest
-    static void bookShouldHaveADescription() {
+    static void bookShouldHaveDescription() {
         Test.startTest();        
         MBMS_Book__c book = [SELECT MBMS_Description__c
                              FROM MBMS_Book__c
                              LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, book.MBMS_Description__c);
+        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, book.MBMS_Description__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Description__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
     }
     
     @isTest
-    static void bookShouldHaveATitle() {
+    static void bookShouldHaveTitle() {
         Test.startTest();        
         MBMS_Book__c book = [SELECT MBMS_Title__c
                              FROM MBMS_Book__c
                              LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, book.MBMS_Title__c);
+        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, book.MBMS_Title__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Title__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
     }
     
     @isTest
-    static void bookShouldHaveACoverImageURL() {
+    static void bookShouldHaveCoverImageURL() {
         Test.startTest();        
         MBMS_Book__c book = [SELECT MBMS_Cover_Image_URL__c
                              FROM MBMS_Book__c
                              LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, book.MBMS_Cover_Image_URL__c);
+        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, book.MBMS_Cover_Image_URL__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Cover_Image_URL__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
     }
 
     @isTest
-    static void bookShouldHaveAStatus() {
+    static void bookShouldHaveStatus() {
         Test.startTest();        
         MBMS_Book__c book = [SELECT MBMS_Status__c
                              FROM MBMS_Book__c
                              LIMIT 1];
         Test.stopTest();
-        
-        System.assertEquals(MBMS_Constants.MBMS_STATUS_APPROVED, book.MBMS_Status__c);
+
+        System.assertEquals(MBMS_Constants.MBMS_STATUS_APPROVED, book.MBMS_Status__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status__c', MBMS_Constants.MBMS_STATUS_APPROVED }));
     }
     
     @isTest
-    static void bookShouldHaveAStatusComment() {
+    static void bookShouldHaveStatusComment() {
         Test.startTest();        
         MBMS_Book__c book = [SELECT MBMS_Status_Comment__c
                              FROM MBMS_Book__c
                              LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT, book.MBMS_Status_Comment__c);
+        System.assertEquals(MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT, book.MBMS_Status_Comment__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status_Comment__c', MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT }));
     }
 }
