--- a/src/classes/BookNewsControllerTest.cls
+++ b/src/classes/BookNewsControllerTest.cls
@@ -19,8 +19,8 @@ public class BookNewsControllerTest {
             bookNews = BookNewsController.getLatestBookNews();
         } catch (Exception e) {
             exceptionsCount++;
-            System.assertNotEquals(null, e);
-            System.assertEquals('List has no rows for assignment to SObject', e.getMessage());
+            System.assertNotEquals(null, e, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'Exception' }));
+            System.assertEquals('List has no rows for assignment to SObject', e.getMessage(), MBMS_Constants.NO_ROWS_FOR_ASSIGMENT);
         }
         Test.stopTest();
         
@@ -33,7 +33,7 @@ public class BookNewsControllerTest {
         MBMS_Book_News__c bookNews = BookNewsController.getLatestBookNews();
         Test.stopTest();
         
-        System.assertNotEquals(null, bookNews);
+        System.assertNotEquals(null, bookNews, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Book_News__c' }));
     }
     
     @isTest
@@ -43,6 +43,6 @@ public class BookNewsControllerTest {
         MBMS_Book_News__c bookNews = BookNewsController.getLatestBookNewsByBookId(book.Id);
         Test.stopTest();
         
-        System.assertNotEquals(null, bookNews);
+        System.assertNotEquals(null, bookNews, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Book_News__c' }));
     }
 }
