--- a/src/classes/MoviePhotoBuilderTest.cls
+++ b/src/classes/MoviePhotoBuilderTest.cls
@@ -15,7 +15,7 @@ private class MoviePhotoBuilderTest {
             .build();
         Test.stopTest();
         
-        System.assertNotEquals(null, moviePhoto);
+        System.assertNotEquals(null, moviePhoto, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Movie_Photo__c' }));
     }
     
     @isTest
@@ -26,50 +26,50 @@ private class MoviePhotoBuilderTest {
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assertNotEquals(null, moviePhoto);
+        System.assertNotEquals(null, moviePhoto, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Movie_Photo__c' }));
     }
     
     @isTest
-    static void moviePhotoShouldHaveAMovie() {
+    static void moviePhotoShouldHaveMovie() {
         Test.startTest();        
         MBMS_Movie_Photo__c moviePhoto = [SELECT MBMS_Movie__c
                                           FROM MBMS_Movie_Photo__c
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assertNotEquals(null, moviePhoto.MBMS_Movie__c);
+        System.assertNotEquals(null, moviePhoto.MBMS_Movie__c, String.format(MBMS_Constants.FIELD_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Movie__c' }));
     }
 
     @isTest
-    static void moviePhotoShouldHaveAPhotoURL() {
+    static void moviePhotoShouldHavePhotoURL() {
         Test.startTest();
         MBMS_Movie_Photo__c moviePhoto = [SELECT MBMS_Photo_URL__c
                                           FROM MBMS_Movie_Photo__c
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, moviePhoto.MBMS_Photo_URL__c);
+        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, moviePhoto.MBMS_Photo_URL__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Photo_URL__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
     }
 
     @isTest
-    static void moviePhotoShouldHaveAStatus() {
+    static void moviePhotoShouldHaveStatus() {
         Test.startTest();        
         MBMS_Movie_Photo__c moviePhoto = [SELECT MBMS_Status__c
                                           FROM MBMS_Movie_Photo__c
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_STATUS_APPROVED, moviePhoto.MBMS_Status__c);
+        System.assertEquals(MBMS_Constants.MBMS_STATUS_APPROVED, moviePhoto.MBMS_Status__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status__c', MBMS_Constants.MBMS_STATUS_APPROVED }));
     }
     
     @isTest
-    static void moviePhotoShouldHaveAStatusComment() {
+    static void moviePhotoShouldHaveStatusComment() {
         Test.startTest();        
         MBMS_Movie_Photo__c moviePhoto = [SELECT MBMS_Status_Comment__c
                                           FROM MBMS_Movie_Photo__c
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT, moviePhoto.MBMS_Status_Comment__c);
+        System.assertEquals(MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT, moviePhoto.MBMS_Status_Comment__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status_Comment__c', MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT }));
     }
 }
