--- a/src/classes/ArtistNewsControllerTest.cls
+++ b/src/classes/ArtistNewsControllerTest.cls
@@ -19,12 +19,12 @@ public class ArtistNewsControllerTest {
             artistNews = ArtistNewsController.getLatestArtistNews();
         } catch (Exception e) {
             exceptionsCount++;
-            System.assertNotEquals(null, e);
-            System.assertEquals('List has no rows for assignment to SObject', e.getMessage());
+            System.assertNotEquals(null, e, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'Exception' }));
+            System.assertEquals(MBMS_Constants.NO_ROWS_FOR_ASSIGMENT, e.getMessage(), String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { MBMS_Constants.NO_ROWS_FOR_ASSIGMENT }));
         }
         Test.stopTest();
         
-        System.assert(exceptionsCount > 0);
+        System.assert(exceptionsCount > 0, String.format(MBMS_Constants.VALUE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'exceptionsCount', '0' }));
     }
     
     @isTest
@@ -33,7 +33,7 @@ public class ArtistNewsControllerTest {
         MBMS_Artist_News__c artistNews = ArtistNewsController.getLatestArtistNews();
         Test.stopTest();
         
-        System.assertNotEquals(null, artistNews);
+        System.assertNotEquals(null, artistNews, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Artist_News__c' }));
     }
     
     @isTest
@@ -43,6 +43,6 @@ public class ArtistNewsControllerTest {
         MBMS_Artist_News__c artistNews = ArtistNewsController.getLatestArtistNewsByArtistId(artist.Id);
         Test.stopTest();
         
-        System.assertNotEquals(null, artistNews);
+        System.assertNotEquals(null, artistNews, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Artist_News__c' }));
     }
 }
