--- a/src/classes/BatchLogsListControllerTest.cls
+++ b/src/classes/BatchLogsListControllerTest.cls
@@ -16,7 +16,7 @@ private class BatchLogsListControllerTest {
         List<MBMS_Batch_Log__c> batchLogs = BatchLogsListController.getBatchLogs();
         Test.stopTest();
         
-        System.assertEquals(0, batchLogs.size());
+        System.assertEquals(0, batchLogs.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'batchLogs', '0' }));
     }
     
     @isTest
@@ -25,8 +25,8 @@ private class BatchLogsListControllerTest {
         List<MBMS_Batch_Log__c> batchLogs = BatchLogsListController.getBatchLogs();
         Test.stopTest();
         
-        System.assert(batchLogs.size() > 0);
-        System.assertNotEquals(null, batchLogs[0]);
+        System.assert(batchLogs.size() > 0, String.format(MBMS_Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'batchLogs', '0' }));
+        System.assertNotEquals(null, batchLogs[0], MBMS_Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL);
     }
     
     @isTest
@@ -38,7 +38,7 @@ private class BatchLogsListControllerTest {
         Boolean areBatchLogsAvailable = BatchLogsListController.areBatchLogsAvailable();
         Test.stopTest();
         
-        System.assert(!areBatchLogsAvailable);
+        System.assert(!areBatchLogsAvailable, MBMS_Constants.VALUE_SHOULD_BE_FALSE);
     }
     
     @isTest
@@ -47,6 +47,6 @@ private class BatchLogsListControllerTest {
         Boolean areBatchLogsAvailable = BatchLogsListController.areBatchLogsAvailable();
         Test.stopTest();
         
-        System.assert(areBatchLogsAvailable);
+        System.assert(areBatchLogsAvailable, MBMS_Constants.VALUE_SHOULD_BE_TRUE);
     }
 }
