--- a/src/classes/MBMS_UtilitiesTest.cls
+++ b/src/classes/MBMS_UtilitiesTest.cls
@@ -6,7 +6,7 @@ private class MBMS_UtilitiesTest {
         MBMS_Movie_Actor__c movieActor = new MovieActorBuilder().create().buildWithAllFieldsAndInsert();
         Test.stopTest();
         
-        System.assertEquals('Movie Actor', MBMS_Utilities.getObjectName(movieActor.Id));
+        System.assertEquals('Movie Actor', MBMS_Utilities.getObjectName(movieActor.Id), String.format(MBMS_Constants.NAME_OF_SOBJECT_SHOULD_BE, new List<String> { 'MBMS_Movie_Actor__c', 'Movie Actor' }));
     }
     
     @isTest
@@ -16,7 +16,7 @@ private class MBMS_UtilitiesTest {
         insert caseObject;
         Test.stopTest();
         
-        System.assertEquals('Case', MBMS_Utilities.getObjectName(caseObject.Id));
+        System.assertEquals('Case', MBMS_Utilities.getObjectName(caseObject.Id), String.format(MBMS_Constants.NAME_OF_SOBJECT_SHOULD_BE, new List<String> { 'Case', 'Case' }));
     }
     
     @isTest
@@ -26,12 +26,12 @@ private class MBMS_UtilitiesTest {
         
         Test.startTest();
         Integer randomNumber = MBMS_Utilities.getRandomNumber(max);
-        System.assert(randomNumber >= 0);
-        System.assert(randomNumber <= max);
+        System.assert(randomNumber >= 0, String.format(MBMS_Constants.VALUE_SHOULD_BE_GREATER_OR_EQUAL_TO_PATTERN, new List<String> { 'randomNumber', '0' }));
+        System.assert(randomNumber <= max, String.format(MBMS_Constants.VALUE_SHOULD_BE_LESS_OR_EQUAL_TO_PATTERN, new List<String> { 'randomNumber', String.valueOf(max) }));
         
         randomNumber = MBMS_Utilities.getRandomNumber(min, max);
-        System.assert(randomNumber >= min);
-        System.assert(randomNumber <= max);
+        System.assert(randomNumber >= min, String.format(MBMS_Constants.VALUE_SHOULD_BE_GREATER_OR_EQUAL_TO_PATTERN, new List<String> { 'randomNumber', String.valueOf(min) }));
+        System.assert(randomNumber <= max, String.format(MBMS_Constants.VALUE_SHOULD_BE_LESS_OR_EQUAL_TO_PATTERN, new List<String> { 'randomNumber', String.valueOf(max) }));
         Test.stopTest();
     }
     
@@ -41,7 +41,7 @@ private class MBMS_UtilitiesTest {
         Date pastDate = MBMS_Utilities.getRandomPastDate(10, 50, 12, 30);
         Test.stopTest();
         
-        System.assertNotEquals(null, pastDate);
-        System.assert(pastDate < Date.today());
+        System.assertNotEquals(null, pastDate, String.format(MBMS_Constants.VALUE_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'pastDate' }));
+        System.assert(pastDate < Date.today(), String.format(MBMS_Constants.VALUE_SHOULD_BE_LESS_THAN_PATTERN, new List<String> { 'pastDate', String.valueOf(Date.today()) }));
     }
 }
