--- a/src/classes/MovieActorBuilderTest.cls
+++ b/src/classes/MovieActorBuilderTest.cls
@@ -15,7 +15,7 @@ private class MovieActorBuilderTest {
             .build();
         Test.stopTest();
         
-        System.assertNotEquals(null, movieActor);
+        System.assertNotEquals(null, movieActor, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Movie_Actor__c' }));
     }
     
     @isTest
@@ -26,39 +26,39 @@ private class MovieActorBuilderTest {
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assertNotEquals(null, movieActor);
+        System.assertNotEquals(null, movieActor, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Movie_Actor__c' }));
     }
     
     @isTest
-    static void movieActorShouldHaveAnActor() {
+    static void movieActorShouldHaveActor() {
         Test.startTest();        
         MBMS_Movie_Actor__c movieActor = [SELECT MBMS_Artist__c
                                           FROM MBMS_Movie_Actor__c
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assertNotEquals(null, movieActor.MBMS_Artist__c);
+        System.assertNotEquals(null, movieActor.MBMS_Artist__c, String.format(MBMS_Constants.FIELD_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Artist__c' }));
     }
     
     @isTest
-    static void movieActorShouldHaveAMovie() {
+    static void movieActorShouldHaveMovie() {
         Test.startTest();        
         MBMS_Movie_Actor__c movieActor = [SELECT MBMS_Movie__c
                                           FROM MBMS_Movie_Actor__c
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assertNotEquals(null, movieActor.MBMS_Movie__c);
+        System.assertNotEquals(null, movieActor.MBMS_Movie__c, String.format(MBMS_Constants.FIELD_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Movie__c' }));
     }
     
     @isTest
-    static void movieActorShouldHaveACharacterName() {
+    static void movieActorShouldHaveCharacterName() {
         Test.startTest();        
         MBMS_Movie_Actor__c movieActor = [SELECT MBMS_Character_Name__c
                                           FROM MBMS_Movie_Actor__c
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, movieActor.MBMS_Character_Name__c);
+        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, movieActor.MBMS_Character_Name__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Character_Name__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
     }
 }
