--- a/src/classes/MovieNewsControllerTest.cls
+++ b/src/classes/MovieNewsControllerTest.cls
@@ -19,12 +19,12 @@ public class MovieNewsControllerTest {
             movieNews = MovieNewsController.getLatestMovieNews();
         } catch (Exception e) {
             exceptionsCount++;
-            System.assertNotEquals(null, e);
-            System.assertEquals('List has no rows for assignment to SObject', e.getMessage());
+            System.assertNotEquals(null, e, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'Exception' }));
+            System.assertEquals('List has no rows for assignment to SObject', e.getMessage(), MBMS_Constants.NO_ROWS_FOR_ASSIGMENT);
         }
         Test.stopTest();
         
-        System.assert(exceptionsCount > 0);
+        System.assert(exceptionsCount > 0, String.format(MBMS_Constants.VALUE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'exceptionsCount' }));
     }
     
     @isTest
@@ -33,7 +33,7 @@ public class MovieNewsControllerTest {
         MBMS_Movie_News__c movieNews = MovieNewsController.getLatestMovieNews();
         Test.stopTest();
         
-        System.assertNotEquals(null, movieNews);
+        System.assertNotEquals(null, movieNews, String.format(MBMS_Constants.FIELD_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Movie_News__c' }));
     }
     
     @isTest
@@ -43,6 +43,6 @@ public class MovieNewsControllerTest {
         MBMS_Movie_News__c movieNews = MovieNewsController.getLatestMovieNewsByMovieId(movie.Id);
         Test.stopTest();
         
-        System.assertNotEquals(null, movieNews);
+        System.assertNotEquals(null, movieNews, String.format(MBMS_Constants.FIELD_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Movie_News__c' }));
     }
 }
