--- a/src/classes/MoviePhotoTriggerHandlerTest.cls
+++ b/src/classes/MoviePhotoTriggerHandlerTest.cls
@@ -15,6 +15,6 @@ private class MoviePhotoTriggerHandlerTest {
                                           LIMIT 1];
         Test.stopTest();
         
-        System.assertEquals(MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT, moviePhoto.MBMS_Status_Comment__c);
+        System.assertEquals(MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT, moviePhoto.MBMS_Status_Comment__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status_Comment__c', MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT }));
     }
 }
