--- a/src/classes/MoviesListControllerTest.cls
+++ b/src/classes/MoviesListControllerTest.cls
@@ -16,7 +16,7 @@ private class MoviesListControllerTest {
         List<MBMS_Movie__c> moviesList = MoviesListController.getMoviesList();
         Test.stopTest();
         
-        System.assertEquals(0, moviesList.size());
+        System.assertEquals(0, moviesList.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'moviesList', '0' }));
     }
     
     @isTest
@@ -25,8 +25,8 @@ private class MoviesListControllerTest {
         List<MBMS_Movie__c> moviesList = MoviesListController.getMoviesList();
         Test.stopTest();
         
-        System.assert(moviesList.size() > 0);
-        System.assertNotEquals(null, moviesList[0]);
+        System.assert(moviesList.size() > 0, String.format(MBMS_Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'moviesList', '0' }));
+        System.assertNotEquals(null, moviesList[0], String.format(MBMS_Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'moviesList' }));
     }
     
     @isTest
@@ -39,7 +39,7 @@ private class MoviesListControllerTest {
         List<MBMS_Movie__c> moviesList = MoviesListController.getRequiringActionMovies();
         Test.stopTest();
         
-        System.assertEquals(0, moviesList.size());
+        System.assertEquals(0, moviesList.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'moviesList', '0' }));
     }
     
     @isTest
@@ -56,8 +56,8 @@ private class MoviesListControllerTest {
         List<MBMS_Movie__c> moviesList = MoviesListController.getRequiringActionMovies();
         Test.stopTest();
         
-        System.assert(moviesList.size() > 0);
-        System.assertNotEquals(null, moviesList[0]);
+        System.assert(moviesList.size() > 0, String.format(MBMS_Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'moviesList', '0' }));
+        System.assertNotEquals(null, moviesList[0], String.format(MBMS_Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'moviesList' }));
     }
     
     @isTest
@@ -69,7 +69,7 @@ private class MoviesListControllerTest {
         Boolean areMoviesAvailable = MoviesListController.areMoviesAvailable();
         Test.stopTest();
         
-        System.assert(!areMoviesAvailable);
+        System.assert(!areMoviesAvailable, String.format(MBMS_Constants.VALUE_SHOULD_BE_FALSE, new List<String> { 'areMoviesAvailable' }));
     }
     
     @isTest
@@ -78,6 +78,6 @@ private class MoviesListControllerTest {
         Boolean areMoviesAvailable = MoviesListController.areMoviesAvailable();
         Test.stopTest();
         
-        System.assert(areMoviesAvailable);
+        System.assert(areMoviesAvailable, String.format(MBMS_Constants.VALUE_SHOULD_BE_TRUE, new List<String> { 'areMoviesAvailable' }));
     }
 }
