--- a/src/classes/NewsControllerTest.cls
+++ b/src/classes/NewsControllerTest.cls
@@ -16,7 +16,7 @@ private class NewsControllerTest {
         List<sObject> allNews = NewsController.getNews();
         Test.stopTest();
         
-        System.assertEquals(0, allNews.size());
+        System.assertEquals(0, allNews.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'allNews', '0' }));
     }
     
     @isTest
@@ -28,8 +28,8 @@ private class NewsControllerTest {
         List<sObject> allNews = NewsController.getNews();
         Test.stopTest();
         
-        System.assert(allNews.size() > 0);
-        System.assertNotEquals(null, allNews.get(0));
+        System.assert(allNews.size() > 0, String.format(MBMS_Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'allNews', '0' }));
+        System.assertNotEquals(null, allNews.get(0), String.format(MBMS_Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'allNews' }));
     }
     
     @isTest
@@ -41,7 +41,7 @@ private class NewsControllerTest {
         Boolean areNewsAvailable = NewsController.areNewsAvailable();
         Test.stopTest();
         
-        System.assert(!areNewsAvailable);
+        System.assert(!areNewsAvailable, String.format(MBMS_Constants.VALUE_SHOULD_BE_FALSE, new List<String> { 'areNewsAvailable' }));
     }
     
     @isTest
@@ -50,6 +50,6 @@ private class NewsControllerTest {
         Boolean areNewsAvailable = NewsController.areNewsAvailable();
         Test.stopTest();
         
-        System.assert(areNewsAvailable);
+        System.assert(areNewsAvailable, String.format(MBMS_Constants.VALUE_SHOULD_BE_TRUE, new List<String> { 'areNewsAvailable' }));
     }
 }
